fix(LandingPage): dark mode/mobile styles + tests

--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -25,21 +25,28 @@
 }
 
 .landing-page__projects--title {
-  @include font-size-3(bold);
+  @include font-size-2-5(regular);
   margin: $space-1;
+
+  @media screen and (min-width: 375px) {
+    @include font-size-3(regular);
+  }
 }
 
 .landing-page__projects--subtitle {
-  @include font-size-2(regular);
+  @include font-size-1-5(regular);
   font-weight: var(--font-weight-regular);
   margin: $space-1;
+
+  @media screen and (min-width: 375px) {
+    @include font-size-2(regular);
+  }
 }
 
 .landing-page__projects--login {
   @include font-size-1-25(regular);
   button {
-    color: $rpf-teal-900;
-    font-weight: var(--font-weight-regular);
+    font-weight: var(--font-weight-bold);
     padding: 0;
     text-decoration: underline;
   }
@@ -47,17 +54,28 @@
 
 // Paths
 .landing-page__paths {
-  background-color: $rpf-white;
   border-radius: $space-1-5;
   margin: 0 $space-1-5;
+  max-width: 368px;
   padding: $space-1-5 $space-1 0;
   text-align: center;
+  width: 100%;
 
   @media screen and (min-width: 768px) {
     align-items: center;
     display: flex;
     text-align: left;
     padding: 0 $space-2;
+    max-width: 634px;
+  }
+}
+
+.landing-page__paths-copy {
+  margin: auto;
+
+  @media screen and (min-width: 768px) {
+    margin: unset;
+    max-width: 300px;
   }
 }
 
@@ -67,7 +85,7 @@
 }
 
 .landing-page__button {
-  @include font-size-1(regular);
+  @include font-size-1-25(regular);
 
   a {
     color: $rpf-black;
@@ -82,12 +100,29 @@
 
 .landing-page__paths--description {
   @include font-size-1(regular);
+  a {
+    font-weight: var(--font-weight-bold);
+  }
 }
 
 .landing-page__paths-media {
   margin-bottom: -2px;
+
   img {
+    aspect-ratio: 3/2;
     display: block;
+    margin: auto;
+    max-width: 301px;
+    width: 100%;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-left: auto;
+
+    img {
+      margin: unset;
+      width: unset;
+    }
   }
 }
 
@@ -98,13 +133,45 @@
 // Dark mode
 
 .--light {
+  .landing-page__paths {
+    background-color: $rpf-white;
+  }
+
   .landing-page-wrapper {
     background-color: $rpf-teal-100;
+  }
+
+  .landing-page__projects--login {
+    button {
+      color: $rpf-teal-900;
+    }
+  }
+
+  .landing-page__paths--description {
+    a {
+      color: $rpf-teal-900;
+    }
   }
 }
 
 .--dark {
+  .landing-page__paths {
+    background-color: $rpf-grey-800;
+  }
+
   .landing-page-wrapper {
     background-color: $rpf-grey-700;
+  }
+
+  .landing-page__projects--login {
+    button {
+      color: $rpf-teal-400;
+    }
+  }
+
+  .landing-page__paths--description {
+    a {
+      color: $rpf-teal-800;
+    }
   }
 }
